--- a/map.html
+++ b/map.html
@@ -16,8 +16,7 @@
     <div id="map"></div>
     <div id="legend"></div>
     <script src="js/main.js" async></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCOacnzA8PdQtPVc_FyHWrB4oSHPFJ0BE0&callback=initMap"
-    async defer></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCOacnzA8PdQtPVc_FyHWrB4oSHPFJ0BE0&callback=initMap"></script>
 
 </body>
 
