fix asynch stuff

--- a/map.html
+++ b/map.html
@@ -15,8 +15,9 @@
     <input id="legend_button" type="button" class="w3-button w3-red" value="Legenda" onclick="openLegend()">
     <div id="map"></div>
     <div id="legend"></div>
-    <script src="js/main.js" async></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCOacnzA8PdQtPVc_FyHWrB4oSHPFJ0BE0&callback=initMap"></script>
+    <script src="js/main.js"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCOacnzA8PdQtPVc_FyHWrB4oSHPFJ0BE0&callback=initMap"
+    async defer></script>
 
 </body>
 
