added footer. TODO:flexcontainers

--- a/map.html
+++ b/map.html
@@ -10,20 +10,27 @@
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-131810603-1"></script>
   <script>
-     window.dataLayer = window.dataLayer || [];
-     function gtag(){dataLayer.push(arguments);}
-     gtag('js', new Date());
-     gtag('config', 'UA-131810603-1');
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config', 'UA-131810603-1');
   </script>
 
 
 </head>
 
 <body>
-    <input id="legend_button" type="button" class="w3-button w3-red" value="Legenda" onclick="openLegend()">
-    <div id="map"></div>
-    <div id="legend"></div>
-    <script src="js/main.js"></script>
+  <input id="legend_button" type="button" class="w3-button w3-red" value="Legenda" onclick="openLegend()">
+  <div class="container">
+    <div class="map_container">
+      <div id="map"></div>
+      <div id="legend"></div>
+    </div>
+    <div class="footer">
+      <p>SZPB 2019 | <a href="mailto:oblvtn@szpb.sk">oblvtn@szpb.sk</a></p>
+    </div>
+  </div>
+  <script src="js/main.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCOacnzA8PdQtPVc_FyHWrB4oSHPFJ0BE0&callback=initMap"
     async defer></script>
 
