Added BunkerImage, FlexboxCSS

--- a/map.html
+++ b/map.html
@@ -22,7 +22,7 @@
 <body>
   <input id="legend_button" type="button" class="w3-button w3-red" value="Legenda" onclick="openLegend()">
   <div class="container">
-    <div class="map_container">
+    <div id="mapcontain" class="map_container">
       <div id="map"></div>
       <div id="legend"></div>
     </div>
@@ -33,6 +33,7 @@
   <script src="js/main.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCOacnzA8PdQtPVc_FyHWrB4oSHPFJ0BE0&callback=initMap"
     async defer></script>
+  
 
 </body>
 
