Added ENG Names,changedAPI key

--- a/map.html
+++ b/map.html
@@ -31,10 +31,9 @@
     </div>
   </div>
   <script src="js/main.js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCOacnzA8PdQtPVc_FyHWrB4oSHPFJ0BE0&callback=initMap"
+  <!-- Site-locked -->
+   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCOacnzA8PdQtPVc_FyHWrB4oSHPFJ0BE0&callback=initMap"
     async defer></script>
-  
-
 </body>
 
 </html>
